--- a/3_random_variables.ipynb
+++ b/3_random_variables.ipynb
@@ -57,18 +57,21 @@
     "### Probability distribution of continuous random variables\n",
     "\n",
     "1. cumulative distribution function (cdf)  \n",
-    "    $F_X(x) = P(X\\leq x)  = P(X < x)$\n",
+    "    $F_X(x) = P(X\\leq x)  = P(X < x)$  \n",
+    "    <img src=\"img/pdf_a_b.png\" width=\"600\">  \n",
+    "    <img src=\"img/pdf_to_a.png\" width=\"600\">  \n",
     "\n",
     "2. probability density function (pdf)  \n",
-    "    $f_X(x) = \\frac{dF_X(x)}{dx}$\n",
+    "    $f_X(x) = \\frac{dF_X(x)}{dx}$  \n",
+    "    <img src=\"img/pdf_slope.png\" width=\"600\">\n",
     "    * pdf is not probability, is the change rate (slope) of that point.\n",
     "    * $f_X(x)\\geq 0,\\quad \\forall x\\in \\cal{R}_{\\it{x}}$  \n",
     "\n",
-    "    * $\\int_{x\\in \\cal{R}_{\\it{x}}}f_X(x)dx=1$\n",
-    "\n",
+    "    * $\\int_{x\\in \\cal{R}_{\\it{x}}}f_X(x)dx=1$  \n",
+    "    <img src=\"img/pdf_all.png\" width=\"600\">\n",
     "    * pdf of a single point is 0.   \n",
-    "    $P(X=a)=\\int_a^af_X(x)dx=0$\n",
-    "\n",
+    "    $P(X=a)=\\int_a^af_X(x)dx=0$  \n",
+    "    <img src=\"img/pdf_single.png\" width=\"600\">\n",
     "    * cdf starts from 0, and ends with 1.  \n",
     "    $\\lim_{x\\to -\\infty}F_X(x)=0$  \n",
     "    $\\lim_{x\\to \\infty}F_X(x)=1$  \n",
@@ -118,7 +121,121 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Standard Deviation\n",
+    "\n",
+    "* $SD(X)=\\sqrt{Var(X)}$\n",
+    "\n",
+    "* Characteristic of standard deviation\n",
+    "    * $SD(X)\\geq 0$\n",
+    "    * $SD(c) = 0$\n",
+    "    * $SD(cX) = |c|SD(X)$\n",
+    "    * $SD(X+b) = SD(X)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Population moment\n",
+    "\n",
+    "1.  raw moment / $r\\text{th}$ population moment about the origin  \n",
+    "    $\\mu_r^{'}=E[(X-0)^r]=E(X^r)=\\begin{cases} \\sum_{x\\in \\cal{R}_{\\it{x}}}x^{r}f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}x^{r}f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$\n",
+    "\n",
+    "2. principal moment / central moment / $r\\text{th}$ population moment about the mean  \n",
+    "    $\\mu_r=E[(X-\\mu)^r]=\\begin{cases} \\sum_{x\\in \\cal{R}_{\\it{x}}}(x-\\mu)^{r}f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}(x-\\mu)^{r}f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$\n",
+    "\n",
+    "3. $r\\text{th}$ population factorial moment  \n",
+    "    $\\mu_{[r]}=E[X(X-1)....(X-r+1)]=\\begin{cases} \\sum_{x\\in \\cal{R}_{\\it{x}}}x(x-1)...(x-r+1)f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}x(x-1)...(x-r+1)f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Population coefficient of skewness\n",
+    "\n",
+    "* $\\alpha_3=\\frac{\\mu_{3}}{\\sigma_3}=\\frac{E[(X-\\mu)^3]}{\\sigma_3}$\n",
+    "\n",
+    "* Characteristic of skewness\n",
+    "    * $\\alpha_3>0$: skewed to the right, positive skewness\n",
+    "    * $\\alpha_3=0$: sysmetric distribution\n",
+    "    * $\\alpha_3<0$: skewed to the left, negative skewness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Population Pearson coefficient\n",
+    "\n",
+    "* $sk_p=\\frac{\\mu-m_o}{\\sigma}$ or $sk_p=3\\frac{\\mu-\\eta}{\\sigma}$\n",
+    "\n",
+    "* Characteristic of Pearson correlation coefficient\n",
+    "    * $sk_p>0$: skewed to the right, positive skewness\n",
+    "    * $sk_p=0$: sysmetric distribution\n",
+    "    * $sk_p<0$: skewed to the left, negative skewness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Population Coefficient of kurtosis\n",
+    "\n",
+    "* $\\alpha_4=\\frac{\\mu_{4}}{\\sigma_4}=\\frac{E[(X-\\mu)^4]}{\\sigma_4}$\n",
+    "\n",
+    "* Characteristic of kurtosis\n",
+    "    * $\\alpha_4>3$: leptokurtic distribution (thick-tail, has outlier)\n",
+    "    * $\\alpha_4=3$: mesokurtic distribution (normal distribution)\n",
+    "    * $\\alpha_4<3$: playtikurtic distribution (thin-tail, less outlier, uniform distribution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Moment Gernerating Function (mgf)\n",
+    "\n",
+    "* $M_X(t)=E[e^{tX}]=\\begin{cases}\\sum_{x\\in \\cal{R}_{\\it{x}}}e^{tx}f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}e^{tx}f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$\n",
+    "\n",
+    "* Characteristic of mgf\n",
+    "    * $M_X(0)=1$\n",
+    "    * $M_X(t)=e^{\\mu t}M_X(t-1)$\n",
+    "\n",
+    "    * $\\frac{d^{r}M_{x}(t)}{dt^r}|_{t=0}=M_{X}^{(r)}(0)=E(X^r)=\\mu_r^{'}$\n",
+    "\n",
+    "    * If $Y=aX+b$, then $M_Y(t)=e^{bt}M_X(at)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Markov's inequality\n",
+    "$P(X\\geq a)\\leq\\frac{E(X)}{a},\\quad \\forall a>0$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chebyshev's inequality\n",
+    "\n",
+    "$P(|X-\\mu|\\geq k\\sigma)\\leq\\frac{1}{k^2}$ and $P(|X-\\mu|< k\\sigma)\\geq1-\\frac{1}{k^2},\\quad \\forall k>0$  \n",
+    "<img src=\"img/chebyshev_inequality.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Jensen's inequality\n",
+    "\n",
+    "$f(E(X))\\geq E(f(X)),\\quad \\text{if}\\ f\\text{ is convex}$ ($f^{''}(x)\\geq 0$)\n",
+    "\n",
+    "$f(E(X))\\leq E(f(X)),\\quad \\text{if}\\ f\\text{ is concave}$ ($f^{''}(x)\\leq 0$)\n"
+   ]
   }
  ],
  "metadata": {
