--- a/3_random_variables.ipynb
+++ b/3_random_variables.ipynb
@@ -27,16 +27,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Probability distribution of discrete random variables\n",
+    "## **Probability Distribution**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Probability distribution of discrete random variables\n",
     "\n",
-    "1. probability mass function (pmf)  \n",
+    "* probability mass function (pmf)  \n",
     "    $f_X(x) = \\begin{cases} P(X=x),\\ \\forall x\\in \\cal{R}_{\\it{x}} \\\\ 0,\\quad\\quad\\quad\\quad \\forall x\\notin \\cal{R}_{\\it{x}} \\end{cases}$  \n",
     "    * pmf is non-negative, i.e., $f_X(x) \\geq 0$ for all $x$ in $\\cal{R}_{\\it{x}}$ and $\\sum_{x\\in\\cal{R}_{\\it{x}}} f_X(x) = 1$.\n",
     "    * sum of pmf of all possible $x$ should equal 1, $\\sum_{x\\in\\cal{R}_{\\it{x}}}f_X(x)=1$\n",
     "    * pmf gives the probability of occurrence of a specific value of a discrete random variable.\n",
     "    * example: coin toss, dice roll, card draw, etc.\n",
     "\n",
-    "2. cumulative distribution function (cdf)  \n",
+    "* cumulative distribution function (cdf)  \n",
     "    $F_X(x) = P(X\\leq x),\\quad -\\infty<x<0\\infty $\n",
     "    * cdf starts from 0, and ends with 1.  \n",
     "    $\\lim_{x\\to -\\infty}F_X(x)=0$  \n",
@@ -44,7 +51,7 @@
     "\n",
     "    * cdf is non-decreasing, i.e., $F_X(x) \\leq F_X(y)\\quad \\forall\\ x\\leq y$\n",
     "\n",
-    "3. pmf and cdf\n",
+    "* pmf and cdf\n",
     "    * $F_X(x) = P(X \\leq x) = \\sum_{t\\leq x}f_X(t)$  \n",
     "    * $f_X(x) = F_X(x) - \\lim_{t\\to -x}F_X(t) = F_X(x) - F_X(x^{-})$\n",
     "    * $P(a<X\\leq b)=P(X\\leq b)-P(X\\leq a) = F_X(b) - F_X(a) = \\sum_{a<x\\leq b}f_X(x)$\n"
@@ -54,14 +61,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Probability distribution of continuous random variables\n",
+    "### 2. Probability distribution of continuous random variables\n",
     "\n",
-    "1. cumulative distribution function (cdf)  \n",
+    "* cumulative distribution function (cdf)  \n",
     "    $F_X(x) = P(X\\leq x)  = P(X < x)$  \n",
     "    <img src=\"img/pdf_a_b.png\" width=\"600\">  \n",
     "    <img src=\"img/pdf_to_a.png\" width=\"600\">  \n",
     "\n",
-    "2. probability density function (pdf)  \n",
+    "* probability density function (pdf)  \n",
     "    $f_X(x) = \\frac{dF_X(x)}{dx}$  \n",
     "    <img src=\"img/pdf_slope.png\" width=\"600\">\n",
     "    * pdf is not probability, is the change rate (slope) of that point.\n",
@@ -83,7 +90,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Expected value\n",
+    "## **Expected Value, Variance and Standard deviation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Expected value\n",
     "* If $X$ is discrete random variable\n",
     "    * $E(X)=\\sum_{x\\in\\cal{R}_{\\it{x}}}xf_X(x)$\n",
     "\n",
@@ -101,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variance\n",
+    "### 2. Variance\n",
     "\n",
     "* If $X$ is discrete random variable\n",
     "    * $Var(X)=\\sum_{x\\in\\cal{R}_{\\it{x}}}[(x-E(X))^2f_X(x)]$\n",
@@ -122,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Standard Deviation\n",
+    "### 3. Standard Deviation\n",
     "\n",
     "* $SD(X)=\\sqrt{Var(X)}$\n",
     "\n",
@@ -137,15 +151,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Population moment\n",
+    "## **Population Moment**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Population moment\n",
     "\n",
-    "1.  raw moment / $r\\text{th}$ population moment about the origin  \n",
+    "*  raw moment / $r\\text{th}$ population moment about the origin  \n",
     "    $\\mu_r^{'}=E[(X-0)^r]=E(X^r)=\\begin{cases} \\sum_{x\\in \\cal{R}_{\\it{x}}}x^{r}f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}x^{r}f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$\n",
     "\n",
-    "2. principal moment / central moment / $r\\text{th}$ population moment about the mean  \n",
+    "* principal moment / central moment / $r\\text{th}$ population moment about the mean  \n",
     "    $\\mu_r=E[(X-\\mu)^r]=\\begin{cases} \\sum_{x\\in \\cal{R}_{\\it{x}}}(x-\\mu)^{r}f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}(x-\\mu)^{r}f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$\n",
     "\n",
-    "3. $r\\text{th}$ population factorial moment  \n",
+    "* $r\\text{th}$ population factorial moment  \n",
     "    $\\mu_{[r]}=E[X(X-1)....(X-r+1)]=\\begin{cases} \\sum_{x\\in \\cal{R}_{\\it{x}}}x(x-1)...(x-r+1)f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}x(x-1)...(x-r+1)f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$"
    ]
   },
@@ -153,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Population coefficient of skewness\n",
+    "### 2. Population coefficient of skewness\n",
     "\n",
     "* $\\alpha_3=\\frac{\\mu_{3}}{\\sigma_3}=\\frac{E[(X-\\mu)^3]}{\\sigma_3}$\n",
     "\n",
@@ -167,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Population Pearson coefficient\n",
+    "### 3. Population Pearson coefficient\n",
     "\n",
     "* $sk_p=\\frac{\\mu-m_o}{\\sigma}$ or $sk_p=3\\frac{\\mu-\\eta}{\\sigma}$\n",
     "\n",
@@ -181,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Population Coefficient of kurtosis\n",
+    "### 4. Population Coefficient of kurtosis\n",
     "\n",
     "* $\\alpha_4=\\frac{\\mu_{4}}{\\sigma_4}=\\frac{E[(X-\\mu)^4]}{\\sigma_4}$\n",
     "\n",
@@ -195,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Moment Gernerating Function (mgf)\n",
+    "### 5. Moment Gernerating Function (mgf)\n",
     "\n",
     "* $M_X(t)=E[e^{tX}]=\\begin{cases}\\sum_{x\\in \\cal{R}_{\\it{x}}}e^{tx}f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}e^{tx}f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$\n",
     "\n",
@@ -212,29 +233,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Markov's inequality\n",
-    "$P(X\\geq a)\\leq\\frac{E(X)}{a},\\quad \\forall a>0$"
+    "## **Inequality**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Chebyshev's inequality\n",
+    "### 1. Markov's inequality\n",
     "\n",
-    "$P(|X-\\mu|\\geq k\\sigma)\\leq\\frac{1}{k^2}$ and $P(|X-\\mu|< k\\sigma)\\geq1-\\frac{1}{k^2},\\quad \\forall k>0$  \n",
-    "<img src=\"img/chebyshev_inequality.png\" width=\"600\">"
+    "* $P(X\\geq a)\\leq\\frac{E(X)}{a},\\quad \\forall a>0$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Jensen's inequality\n",
+    "### 2. Chebyshev's inequality\n",
     "\n",
-    "$f(E(X))\\geq E(f(X)),\\quad \\text{if}\\ f\\text{ is convex}$ ($f^{''}(x)\\geq 0$)\n",
+    "* $P(|X-\\mu|\\geq k\\sigma)\\leq\\frac{1}{k^2}$ and $P(|X-\\mu|< k\\sigma)\\geq1-\\frac{1}{k^2},\\quad \\forall k>0$  \n",
+    "    <img src=\"img/chebyshev_inequality.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Jensen's inequality\n",
     "\n",
-    "$f(E(X))\\leq E(f(X)),\\quad \\text{if}\\ f\\text{ is concave}$ ($f^{''}(x)\\leq 0$)\n"
+    "* $f(E(X))\\geq E(f(X)),\\quad \\text{if}\\ f\\text{ is convex}$ ($f^{''}(x)\\geq 0$)\n",
+    "\n",
+    "* $f(E(X))\\leq E(f(X)),\\quad \\text{if}\\ f\\text{ is concave}$ ($f^{''}(x)\\leq 0$)\n"
    ]
   }
  ],
