--- a/2_classical_probability_theory.ipynb
+++ b/2_classical_probability_theory.ipynb
@@ -11,17 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kologorov's axioms\n",
-    "1. $P(A)\\leq0,\\ A\\subset S$\n",
-    "2. $P(S)=1$\n",
-    "3. $P(\\bigcup_{i=1}^{\\infty}A_i)=\\sum_{i=1}^{\\infty}P(A_i),\\quad A_i\\cap A_j=\\emptyset,\\ \\forall i\\neq j$"
+    "### 1. Kologorov's axioms\n",
+    "(1) $P(A)\\leq0,\\ A\\subset S$  \n",
+    "(2) $P(S)=1$  \n",
+    "(3) $P(\\bigcup_{i=1}^{\\infty}A_i)=\\sum_{i=1}^{\\infty}P(A_i),\\quad A_i\\cap A_j=\\emptyset,\\ \\forall i\\neq j$  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### the law of total probability\n",
+    "### 2. the law of total probability\n",
     "$P(B) = P(A\\cap B)+P(A\\cap B^{'})$"
    ]
   },
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### the addition rule\n",
+    "### 3. the addition rule\n",
     "* original  \n",
     "    $P(A\\cup B)=P(A)+P(B)-P(A\\cap B)$\n",
     "\n",
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Boole's inequality\n",
+    "### 4. Boole's inequality\n",
     "* original  \n",
     "    $P(A\\bigcup B) \\leq P(A) + P(B)$\n",
     "\n",
@@ -59,11 +59,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bonferroni's inequality\n",
+    "### 5. Bonferroni's inequality\n",
     "* original  \n",
-    "    $P(A \\cap B)=1-P(A^{'})-P(B^{'})$ or  \n",
-    "\n",
-    "    $P(A \\cap B) \\leq P(A) + P(B) - 1$\n",
+    "    $P(A \\cap B)=1-P(A^{'})-P(B^{'})$    or    $P(A \\cap B) \\leq P(A) + P(B) - 1$\n",
     "\n",
     "* extended  \n",
     "    $P(\\bigcup_{i=1}^{n}A_i) \\geq 1-\\sum_{i=1}^{n}P(A_i^{'})$ or   \n",
@@ -75,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conditional probability\n",
+    "### 6. Conditional probability\n",
     "\n",
     "If event $B$ has happend, the probability of the event $A$ happening is.\n",
     "\n",
@@ -87,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### idependence\n",
+    "### 7. idependence\n",
     "\n",
     "If $A$ and $B$ are independent, then the probability of the event $A$ happening is not affected by event $B$ happened or not, vice versa.\n",
     "\n",
@@ -100,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### partition\n",
+    "### 8. partition\n",
     "\n",
     "* pairwise mutually exclusive: $A_i \\cap A_j = \\emptyset,\\ \\forall i\\neq j$\n",
     "* collectively exhaustive: $\\bigcup_{i=1}^{n}A_I=S$"
@@ -110,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### the law of total probability\n",
+    "### 9. the law of total probability\n",
     "\n",
     "$P(B) = \\sum_{i=1}^{n}P(A_i\\cap B) = \\sum_{i=1}^{n}P(B|A_i)P(A_i)$"
    ]
@@ -119,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Baye's rule\n",
+    "### 10.  Baye's rule\n",
     "\n",
     "$P(A_k|B) = \\frac{P(B|A_k)P(A_k)}{\\sum_{i=1}^{n}P(B|A_i)P(A_i)}$  \n",
     "\n",
