--- a/3_random_variables.ipynb
+++ b/3_random_variables.ipynb
@@ -219,6 +219,9 @@
     "### 5. Moment Gernerating Function (mgf)\n",
     "\n",
     "* $M_X(t)=E[e^{tX}]=\\begin{cases}\\sum_{x\\in \\cal{R}_{\\it{x}}}e^{tx}f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}e^{tx}f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$\n",
+    "* Can get raw moment by taking derivative with respect to $t$\n",
+    "    * $M_x^{'}(t)|_{t=0}=M_x^{'}(0)=E(X)$\n",
+    "    * $M_x^{(r)}(t)|_{t=0}=M_{X}^{(r)}(0)=E(X^r)=\\mu_r$\n",
     "\n",
     "* Characteristic of mgf\n",
     "    * $M_X(0)=1$\n",
@@ -227,6 +230,24 @@
     "    * $\\frac{d^{r}M_{x}(t)}{dt^r}|_{t=0}=M_{X}^{(r)}(0)=E(X^r)=\\mu_r^{'}$\n",
     "\n",
     "    * If $Y=aX+b$, then $M_Y(t)=e^{bt}M_X(at)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Factorial Moment Generating Function (fmgf)\n",
+    "\n",
+    "* $G_X(t)=E[e^{tX}]=\\begin{cases}\\sum_{x\\in \\cal{R}_{\\it{x}}}e^{tx}f_{X}(x),\\quad X\\ \\text{is discrete random variable} \\\\ \\int_{x\\in \\cal{R}_{\\it{x}}}e^{tx}f_{X}(x)dx,\\ X\\ \\text{is continuous random variable} \\end{cases}$\n",
+    "\n",
+    "* Can get factorial moment by taking derivative with respect to $t$  \n",
+    "    * $G_x^{'}(t)|_{t=1}=G_x^{'}(1)=E(X)$\n",
+    "    * $G_x^{(r)}(t)|_{t=1}=M_{X}^{(r)}(1)=E(X(X-1)...(X-r+1))$\n",
+    "\n",
+    "\n",
+    "* Characteristic of fmgf\n",
+    "    * $F_X(0)=1$\n",
+    "    * $F_X(t)=e^{\\mu t}F_X(t-1)$"
    ]
   },
   {
