add bivariate normal distribution

--- a/6_common_continuous_distribution.ipynb
+++ b/6_common_continuous_distribution.ipynb
@@ -335,7 +335,11 @@
     "* Given $X\\sim\\text{Exp}(\\beta)$, if $Y=aX$ and $a>0$ then $Y\\sim\\text{Exp}(a\\beta)$\n",
     "\n",
     "* Memoryless\n",
-    "    * Given $X\\sim\\text{Exp}(\\beta)$, then $P(X>a+b|X>a)=P(X>b$)"
+    "    * Given $X\\sim\\text{Exp}(\\beta)$, then $P(X>a+b|X>a)=P(X>b)$\n",
+    "\n",
+    "* Exponential/Gamma distribution is dual distribution of Poisson distribution\n",
+    "    * If $Y\\sim\\text{Poi}(t\\lambda)$ and $T\\sim\\text{Exp}(\\beta=\\frac{1}{\\lambda})$, then $P(Y=0)=P(T>t)$\n",
+    "    * If $Y\\sim\\text{Poi}(t\\lambda)$ and $T\\sim\\text{Gamma}(\\alpha,\\beta=\\frac{1}{\\lambda})$, then $P(Y=\\alpha)=P(T>t)$"
    ]
   },
   {
@@ -378,7 +382,42 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### **5. Bivariate normal distribution**\n",
+    "\n",
+    "* $\\cal{R}_{\\it{XY}}=\\lbrace (x,y)| -\\infty<x<\\infty,\\ -\\infty<y<\\infty \\rbrace$\n",
+    "\n",
+    "* parameter\n",
+    "    * $\\mu_X$: expected value of $X$\n",
+    "    * $\\mu_Y$: expected value of $Y$\n",
+    "    * $\\sigma_X^2$; variance of $X$\n",
+    "    * $\\sigma_X^2$; variance of $Y$\n",
+    "    * $\\rho$: correlation coefficient of $X$ and $Y$\n",
+    "\n",
+    "* $(X,Y)\\sim\\cal{BN}(\\mu_X,\\mu_Y,\\sigma_X^2,\\sigma_Y^2,\\rho)$ $\\implies f_{XY}(x,y)=\\frac{1}{2\\pi\\sigma_X\\sigma_Y\\sqrt{1-\\rho^2}}e^{\\frac{-1}{2(1-\\rho^2)}[(\\frac{x-\\mu_X}{\\sigma_X})^2-2\\rho(\\frac{x-\\mu_X}{\\sigma_X})(\\frac{y-\\mu_Y}{\\sigma_Y})+(\\frac{y-\\mu_Y}{\\sigma_Y})^2]}$\n",
+    "\n",
+    "* $E(X)=\\mu_X$\n",
+    "\n",
+    "* $E(X)=\\mu_Y$\n",
+    "\n",
+    "* $Var(X)=\\sigma_X$\n",
+    "\n",
+    "* $Var(Y)=\\sigma_Y$\n",
+    "\n",
+    "* $Corr(X,Y)=\\rho$\n",
+    "\n",
+    "* $Cov(X,Y)=\\sigma_{XY}=\\rho\\sigma_X\\sigma_Y$\n",
+    "\n",
+    "* Conditional distribution\n",
+    "\n",
+    "    * $(X|Y=y)\\sim\\cal{N}\\it(\\mu_X+\\rho\\frac{\\sigma_X}{\\sigma_Y}(Y-\\mu_Y),\\sigma_X^2(1-\\rho^2))$\n",
+    "\n",
+    "    * $E(X|Y=y)=\\mu_X+\\rho\\frac{\\sigma_X}{\\sigma_Y}(Y-\\mu_Y)$\n",
+    "\n",
+    "    * $Var(X|Y=y)=\\sigma_X^2(1-\\rho^2)$\n",
+    "\n",
+    "* If $X\\perp Y$, then $\\rho=0$\n"
+   ]
   }
  ],
  "metadata": {
